test/expected/explain_uv.out
explain unsigned void x
        ^
9: error: "unsigned void" is illegal for built-in type
